--- a/styles/main.css
+++ b/styles/main.css
@@ -1190,7 +1190,7 @@ html {
   line-height: 68px;
   letter-spacing: -2px;
   margin-bottom: 32px;
-  font-family: "Poppins", sans-serif; }
+  font-family: Poppins, sans-serif; }
 
 .second-title {
   font-weight: 600;
