--- a/styles/main.css
+++ b/styles/main.css
@@ -181,19 +181,19 @@ li {
     .header .header__btn-link {
       margin-left: 60px !important; } }
   .header__slider-part {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin: 48px auto 0; }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    margin-top: 48px; }
   .header__description {
-    margin: auto;
     padding: 0 25px;
-    max-width: 400px; }
+    margin-right: 200px;
+    max-width: 400px;
+    justify-self: end;
+    -ms-flex-item-align: center;
+        align-self: center; }
   .header__description-about {
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
@@ -217,38 +217,47 @@ li {
             justify-content: flex-end;
     border-top-left-radius: 200px;
     position: relative;
-    max-width: 687px;
     overflow: hidden; }
   .header .slider__img {
-    max-width: 100%; }
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+    height: 100%; }
   .header .slider__item {
-    max-width: 687px;
     height: 680px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 50vw);
     position: relative;
     right: 0;
-    -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out; }
-  @media (max-width: 1150px) {
-    .header .header__slider-part {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column; }
+    left: 0;
+    -webkit-transition: left 1s ease-in-out, right 1s ease-in-out;
+    transition: left 1s ease-in-out, right 1s ease-in-out; }
+  @media (max-width: 1400px) {
     .header .header__description {
-      -ms-flex-item-align: start;
-          align-self: flex-start;
-      margin-left: 150px; }
-    .header .header__slider {
-      -ms-flex-item-align: end;
-          align-self: flex-end;
-      margin-top: 40px; } }
+      margin-right: 0;
+      justify-self: center; } }
   @media (max-width: 1024px) {
     .header .header__description,
     .header .header__btn-link {
       margin: auto; } }
+  @media (max-width: 800px) {
+    .header .header__slider-part {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .header .header__description-about {
+      margin-bottom: 40px; }
+    .header .header__slider {
+      -ms-flex-item-align: start;
+          align-self: flex-start;
+      max-width: 100vw;
+      margin-top: 70px; }
+    .header .slider__item {
+      grid-template-columns: repeat(3, 100vw); } }
   @media (max-width: 600px) {
     .header .header__slider {
       display: none; }
