--- a/styles/main.css
+++ b/styles/main.css
@@ -15,18 +15,7 @@ body {
 a {
   text-decoration: none;
   color: white;
-  outline: none;
   position: relative; }
-  a:focus::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 3px;
-    bottom: -10px;
-    background: deepskyblue;
-    position: absolute; }
-  a:active, a:hover {
-    outline: none; }
 
 ul,
 li {
@@ -104,10 +93,6 @@ li {
     margin-top: 4px; }
   @media (max-width: 1024px) {
     .header .header__nav {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
@@ -134,7 +119,8 @@ li {
       margin: 0; }
     .header .header__hire-us-link {
       margin: 0;
-      margin-top: 30px; }
+      margin-right: 71px;
+      width: 85px; }
     .header .header__description {
       -webkit-animation: none;
               animation: none; } }
@@ -475,7 +461,6 @@ li {
     transition: background-color 0.2s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.2s ease-in-out;
     transition: background-color 0.2s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.2s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.2s ease-in-out; }
     .card__item:hover {
-      background-color: #f2f9ff;
       -webkit-transform: scale(1.1);
               transform: scale(1.1);
       -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
